# FinalProject

./: README.md  run.sh
bitirme_ws/: README.md
bitirme_ws/devel/: _setup_util.py  local_setup.sh  setup.fish
bitirme_ws/devel/lib/pkgconfig/: pcl_qt_viewer.pc
bitirme_ws/src/pcl_qt_viewer/: CMakeLists.txt
bitirme_ws/src/pcl_qt_viewer/include/pcl_qt_viewer/: coverage_planner.h  pointcloudglwidget.h  subscribe_pointcloud2message.h  ui_main_window.h  vfh_planner.h
bitirme_ws/src/pcl_qt_viewer/src/: coverage_planner.cpp  main.cpp  mapping_manager.cpp  subscribe_pointcloud2message.cpp  vfh_planner.cpp
bitirme_ws/src/pcl_qt_viewer/ui/: main_window.ui
devel/lib/pcl_qt_viewer/: pcl_qt_viewer_node
devel/share/pcl_qt_viewer/cmake/: pcl_qt_viewerConfig.cmake
devel/src/pcl_qt_viewer/maps/: final_map.pcd
src/pcl_qt_viewer/: package.xml
src/pcl_qt_viewer/include/pcl_qt_viewer/: mapping_manager.h  navigation_manager.h  pcl_qt_viewer.h  pcl_qt_viewer_node.h
src/pcl_qt_viewer/src/: navigation_manager.cpp  pcl_qt_viewer_node.cpp  pointcloudglwidget.cpp
