<?xml version="1.0"?>
<package format="2">
  <name>pcl_qt_viewer</name>
  <version>0.0.1</version>
  <description>The pcl_qt_viewer package</description>
  <maintainer email="berresenakirac71@gmail.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_export_depend>qtbase5-dev</build_export_depend>
  <build_export_depend>qtdeclarative5-dev</build_export_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qtdeclarative5-dev</build_depend>

  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>qtdeclarative5-dev</exec_depend>

</package>
